--- a/Friends/Base.lproj/Main.storyboard
+++ b/Friends/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -133,14 +133,29 @@
                     <view key="view" contentMode="scaleToFill" id="i1c-eC-40r">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gRe-IH-uGg">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="gRe-IH-uGg" firstAttribute="leading" secondItem="t8r-5D-VIF" secondAttribute="leading" id="4XX-T7-WUt"/>
+                            <constraint firstItem="gRe-IH-uGg" firstAttribute="top" secondItem="t8r-5D-VIF" secondAttribute="top" id="FN9-EC-Fvv"/>
+                            <constraint firstItem="t8r-5D-VIF" firstAttribute="bottom" secondItem="gRe-IH-uGg" secondAttribute="bottom" id="cXb-xV-f8R"/>
+                            <constraint firstItem="t8r-5D-VIF" firstAttribute="trailing" secondItem="gRe-IH-uGg" secondAttribute="trailing" id="ea8-sh-W6t"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="t8r-5D-VIF"/>
                     </view>
                     <navigationItem key="navigationItem" id="S4X-8Z-yrF"/>
+                    <connections>
+                        <outlet property="tableView" destination="gRe-IH-uGg" id="tOs-k3-JVN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kUE-GT-Rv3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="207" y="1594"/>
+            <point key="canvasLocation" x="190" y="1596"/>
         </scene>
         <!--Setting View Controller-->
         <scene sceneID="0Jm-IT-27Z">
